kubernetes/apps/base/teslamate/teslamate/app/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: grafana-datasource-secrets
  namespace: teslamate
spec:
  from:
    - group: grafana.integreatly.org
      kind: GrafanaDatasource
      namespace: monitoring
  to:
    - group: ""
      kind: Secret
