kubernetes/apps/base/teslamate/teslamate/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate
  namespace: teslamate
  labels:
    app: teslamate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teslamate
  template:
    metadata:
      labels:
        app: teslamate
    spec:
      containers:
        - name: teslamate
          image: teslamate/teslamate:4.3.0
          ports:
            - containerPort: 4000
              name: http
          securityContext:
            capabilities:
              drop: ["ALL"]
          livenessProbe:
            tcpSocket:
              port: 4000
          readinessProbe:
            tcpSocket:
              port: 4000
