kubernetes/apps/base/teslamate/teslamate/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teslamate
  namespace: teslamate
  labels:
    app: teslamate
spec:
  selector:
    app: teslamate
  ports:
    - name: http
      port: 4000
      targetPort: 4000
