kubernetes/apps/base/teslamate/teslamate/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: teslamate
  namespace: teslamate
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: home
      sectionName: wildcard-keiretsu-top-https
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
      sectionName: wildcard-keiretsu-top-https
  hostnames:
    - teslamate.keiretsu.top
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: teslamate
          port: 4000
          weight: 1
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: "X-Forwarded-Proto"
                value: "https"
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            remove:
              - "Server"
              - "X-XSS-Protection"
            set:
              - name: "X-Content-Type-Options"
                value: "nosniff"
              - name: "X-Frame-Options"
                value: "SAMEORIGIN"
              - name: "Cache-Control"
                value: "no-transform"
      matches:
        - path:
            type: PathPrefix
            value: /
